src/components/Snackbar/Snackbar.module.css
.container {
  padding: 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  background-color: var(--surface);
  border-radius: 1rem;
  position: fixed;
  top: 10dvh;
  margin: 0 auto;
  max-width: 300px;
  width: 100%;
  box-shadow:
    0 4px 24px rgba(0, 0, 0, 0.18),
    0 1.5px 6px rgba(0, 0, 0, 0.2);
}

.actionsContainer {
  margin-left: auto;
  display: flex;
  justify-content: end;
  align-items: center;
  gap: 0.75rem;
}

.undoBtn {
  border: none;
  background-color: transparent;
  padding: 0;
  align-self: center;
}

.undoBtn p {
  font-weight: bold;
  text-align: center;
  color: var(--error);
  text-decoration: underline;
}

.closeIcon {
  width: 1.4rem;
}

@media (width >= 850px) {
  .container {
    top: unset;
    bottom: 2rem;
    left: 1rem;
    max-width: 350px;
  }
}

